@@ -1,4 +1,5 @@
 
+  - Added support for PHP's native json_encode() if available
   - Revised object encoder to detect object recursion
 
 2008-10-07 - Release Version: 0.2.b.2
